fix overflow-x

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,6 +23,7 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
+    overflow-x: hidden;
 }
 
 body {
